# obj-viewer

./: 1.model_loading.fs  1.model_loading.vs  CMakeLists.txt  README.md  vcpkg.json
imGuiExample/: BasicMesh.h  CMakeLists.txt  UseImGui.cpp  UseImGui.h  imGuiExample.cpp  imGuiExample.h
src/: BasicMesh.cpp  BasicMesh.h  CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  Texture.h  UseImGui.cpp  UseImGui.h  Vertex.h  main.cpp  shader.cpp  shader.h
